[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honeyhive-cli"
version = "0.1.0"
description = "Command-line interface for the HoneyHive API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "HoneyHive", email = "support@honeyhive.ai" },
]
keywords = ["honeyhive", "cli", "observability", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
hh = "honeyhive_cli.cli:cli"

[project.urls]
Homepage = "https://honeyhive.ai"
Documentation = "https://docs.honeyhive.ai"
Repository = "https://github.com/honeyhiveai/honeyhive-openapi"

[tool.hatch.build.targets.wheel]
packages = ["src/honeyhive_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/honeyhive_cli"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
